Add README and CMakeLists, move source files to src folder
- Added README.md with project documentation
- Added CMakeLists.txt for build configuration
- Moved source files to src folder for better organization

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,15 @@ main
 # その他
 *.csv
 .env
+
+# buildフォルダ内のすべてのファイルを無視
+/build/*
+
+# buildフォルダそのものは無視しない
+!build/
+
+# .gitkeepは無視しない
+!build/.gitkeep
+
+# samplesフォルダはサブフォルダのファイル含め無視しない
+!samples/**
